--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diários de Mystic Falls</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -22,7 +23,6 @@
                 <li class="login-link">
                     <div class="frame-login"><a href="#####">LOGIN</a></div>
                 </li>
-                <li><a href="####">CADASTRE-SE</a></li>
             </ul>
         </div>
     </div>
@@ -37,33 +37,41 @@
 <div class="content1">
     <div class="apresentacao">
         <div class="logo-content1">
-            <img src="icones/logo1.png">
+            <img src="imagens-serie/icones/outrologo.png">
         </div>
-        <h4>Sobre a Série</h4>
 
-        <div class="caixaInformacao">
-            <div class="imagem2">
-                <img src="">
-            </div>            
-            <p> 
-                "The Vampire Diaries" é uma série de televisão que combina elementos de romance, drama sobrenatural e
-                suspense. A série se passa na fictícia cidade de Mystic Falls, Virgínia, e segue a vida de Elena                 Gilbert, uma jovem que se vê no meio de um mundo sobrenatural repleto de vampiros, lobisomens, bruxas e outros seres místicos. <br>
+        <div class="containerColunasSobre">
+            <div class="caixaEsquerda">
+                <div class="imagemCaixaEsquerda">
+                    <img class="imgCidade" src="imagens-serie/cenários/torre.jpg" />
+                </div>
+                <p>
+            </div>
 
-                O ponto de partida da série é a vida de Elena Gilbert, uma jovem que, após a trágica morte de seus pais,
-                se vê imersa em um turbilhão de eventos sobrenaturais. Ela conhece os irmãos Stefan e Damon Salvatore, dois
-                vampiros imortais com personalidades e abordagens muito diferentes à sua condição vampírica. <br>
+            <div class="caixaDireita">
+                <h2> Sobre a Série </h2>
+                <p>
+                    "The Vampire Diaries" é uma série de televisão que combina elementos de romance, drama sobrenatural e suspense. A série se passa na fictícia cidade de Mystic Falls, Virgínia, e segue a vida de Elena Gilbert, uma jovem que se vê no meio de um mundo sobrenatural repleto de vampiros, lobisomens, bruxas e outros seres místicos. <br><br>
 
-                Stefan, o irmão mais velho, representa o vampiro que luta para resistir à sede de sangue humano e vive
-                em busca de redenção. Damon, por outro lado, é impulsivo e muitas vezes sucumbe aos seus instintos                sombrios, tornando-o um anti-herói carismático. <br>
+                    O ponto de partida da série é a vida de Elena Gilbert, uma jovem que, após a trágica morte de seus pais, se vê imersa em um turbilhão de eventos sobrenaturais. Ela conhece os irmãos Stefan e Damon Salvatore, dois vampiros imortais com personalidades e abordagens muito diferentes à sua condição vampírica. <br><br>
 
-                O enredo se complica quando Elena se torna o epicentro de um triângulo amoroso entre os irmãos               Salvatore. Essa dinâmica complexa desencadeia uma série de eventos sobrenaturais, conflitos e reviravoltas. <br>
+                    Stefan, o irmão mais velho, representa o vampiro que luta para resistir à sede de sangue humano e vive em busca de redenção. Damon, por outro lado, é impulsivo e muitas vezes sucumbe aos seus instintos sombrios, tornando-o um anti-herói carismático. <br><br>
+
+                    O enredo se complica quando Elena se torna o epicentro de um triângulo amoroso entre os irmãos Salvatore. Essa dinâmica complexa desencadeia uma série de eventos sobrenaturais, conflitos e reviravoltas.
 
 
-                Além dos aspectos românticos e sobrenaturais, a série também explora temas profundos, como a busca por
-                redenção, o peso da imortalidade e a eterna luta entre o bem e o mal. Os personagens mantêm diários           pessoais, que não apenas oferecem uma visão íntima de suas experiências, mas também servem como uma forma de reflexão sobre suas ações e emoções. <br>
-            </p>
-        
+                    Além dos aspectos românticos e sobrenaturais, a série também explora temas profundos, como a busca
+                    por
+                    redenção, o peso da imortalidade e a eterna luta entre o bem e o mal. Os personagens mantêm diários
+                    pessoais, que não apenas oferecem uma visão íntima de suas experiências, mas também servem como uma
+                    forma de reflexão sobre suas ações e emoções.
+                </p>
+
+            </div>
         </div>
+    </div>
+    <div>
+
     </div>
 </div>
 
