arrumei as colunas do conteudo1 e o tamanho da div

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </div>
     </div>
 
-    <div class="banner">        
-     </div>
+    <div class="banner"> </div>
     </div>
 
     <div class="conteudo0">        
@@ -66,10 +65,9 @@
 
             <div class="recipienteColunasSobre">
                 <div class="caixaEsquerda">
-                    <div class="imagemCaixaEsquerda">
+                     <div class="imagemCaixaEsquerda">
                         <img class="imgCidade" src="imagens-serie/cenários/torre.jpg" />
-                    </div>
-                    <p>
+                    </div>                     
                 </div>
 
                 <div class="caixaDireita">
@@ -77,7 +75,7 @@
                     <p>
                         "The Vampire Diaries" é uma série de televisão que combina elementos de romance, drama sobrenatural e suspense. A série se passa na fictícia cidade de Mystic Falls, Virgínia, e segue  a vida de Elena Gilbert, uma jovem que se vê no meio de um mundo sobrenatural repleto de vampiros, lobisomens, bruxas e outros seres místicos. <br><br>
 
-                        O ponto de partida da série é a vida de Elena Gilbert, uma jovem que, após a trágica morte de seus pais, se vê imersa em um turbilhão de eventos sobrenaturais. Ela conhece os irmãos Stefan eDamon Salvatore, dois vampiros imortais com personalidades e abordagens muito diferentes à sua condição vampírica. <br><br>
+                        O ponto de partida da série é a vida de Elena Gilbert, uma jovem que, após a trágica morte de seus pais, se vê imersa em um turbilhão de eventos sobrenaturais. Ela conhece os irmãos Stefan e Damon Salvatore, dois vampiros imortais com personalidades e abordagens muito diferentes à sua condição vampírica. <br><br>
 
                         Stefan, o irmão mais velho, representa o vampiro que luta para resistir à sede de sangue humano e vive em busca de redenção. Damon, por outro lado, é impulsivo e muitas vezes sucumbe aos seus instintos sombrios, tornando-o um anti-herói carismático. <br><br>
 
