começando a criar a sessão espécies

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="imagemTrio"> 
+            <div class="imagemTrio">
                 <img class="pngTrio" src="imagens-serie/png/png2.png">
             </div>
         </div>
@@ -111,6 +111,26 @@
         </div>
     </div>
 
+    <div class="conteudo2">
+        <div>
+            <h1> Espécies </h1>
+            <p> Descubra quais são as espécies existentes em Mystic Falls </p>
+
+            <img src="">
+            <p>vampiro</p>
+            <img src="">
+            <p>lobisomen</p>
+            <img src="">
+            <p>vampiro original</p>
+            <img src="">
+            <p>híbrido</p>
+            <img src="">
+            <p>duplicata</p>
+            <img src="">
+            <p>bruxa</p>
+        </div>
+
+    </div>
     </div>
 </body>
 
