adicionei as fotos da sessão de espécie

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="conteudo1">
         <div class="recipienteApresentacao">
             <div class="logo-recipienteApresentacao">
-                <img class="logoTVD" src="imagens-serie/icones/outrologo.png">
+                <img class="logoTVD" src="icones\outrologo.png">
             </div>
 
             <div class="recipienteColunasSobre">
@@ -112,21 +112,22 @@
     </div>
 
     <div class="conteudo2">
-        <div>
-            <h1> Espécies </h1>
-            <p> Descubra quais são as espécies existentes em Mystic Falls </p>
 
-            <img src="">
+        <h1> Espécies </h1>
+        <p> Descubra quais são as espécies existentes em Mystic Falls </p>
+
+        <div class="sessaoEspecies">
+            <img class="imgElenaVampira" src="imagens-serie/elenaVampira.png">
             <p>vampiro</p>
-            <img src="">
+            <img class="imgLobisomem" src="imagens-serie\lobisomem.png">
             <p>lobisomen</p>
-            <img src="">
+            <img class="imgElijahVampiro" src="imagens-serie/elijahVampiro.jpg">
             <p>vampiro original</p>
-            <img src="">
+            <img class="imgKlausHibrido" src="imagens-serie\KlausHibrido.png">
             <p>híbrido</p>
-            <img src="">
+            <img class="Doppelgangers" src="imagens-serie/doppelgangers.png">
             <p>duplicata</p>
-            <img src="">
+            <img class="imgBruxa" src="imagens-serie/bruxa.png">
             <p>bruxa</p>
         </div>
 
