sessao de espécie finalizada

--- a/index.html
+++ b/index.html
@@ -112,25 +112,41 @@
     </div>
 
     <div class="conteudo2">
-
+        <br>
         <h1> Espécies </h1>
-        <p> Descubra quais são as espécies existentes em Mystic Falls </p>
+        <div class="linhaTitulo"></div>
 
-        <div class="sessaoEspecies">
-            <img class="imgElenaVampira" src="imagens-serie/elenaVampira.png">
-            <p>vampiro</p>
-            <img class="imgLobisomem" src="imagens-serie\lobisomem.png">
-            <p>lobisomen</p>
-            <img class="imgElijahVampiro" src="imagens-serie/elijahVampiro.jpg">
-            <p>vampiro original</p>
-            <img class="imgKlausHibrido" src="imagens-serie\KlausHibrido.png">
-            <p>híbrido</p>
-            <img class="Doppelgangers" src="imagens-serie/doppelgangers.png">
-            <p>duplicata</p>
-            <img class="imgBruxa" src="imagens-serie/bruxa.png">
-            <p>bruxa</p>
+        <p class="subtituloConteudo2"> Descubra quais são as espécies existentes em Mystic Falls </p>
+
+        <div class="sessaoEspecies1">
+            <div class="especie">
+                <img class="imgElenaVampira" src="imagens-serie/vampEspecie.png">
+                <p>vampiro</p>
+            </div>
+            <div class="especie">
+                <img class="imgLobisomem" src="imagens-serie/lobEspecie.png">
+                <p>lobisomen</p>
+            </div>
+            <div class="especie">
+                <img class="imgElijahVampiro" src="imagens-serie/elijahEspecie.png">
+                <p>vampiro original</p>
+            </div>
         </div>
-
+        <br> <br>
+        <div class="sessaoEspecies2">
+            <div class="especie">
+                <img class="imgKlausHibrido" src="imagens-serie/klausEspecie.png">
+                <p>híbrido</p>
+            </div>
+            <div class="especie">
+                <img class="Doppelgangers" src="imagens-serie/doppelSessao.png">
+                <p>duplicata</p>
+            </div>
+            <div class="especie">
+                <img class="imgBruxa" src="imagens-serie/bruxaEspecie.png">
+                <p>bruxa</p>
+            </div>
+        </div>
     </div>
     </div>
 </body>
