criei a sessão de personagens, adicionei fotos, titulo e subtitulo

--- a/index.html
+++ b/index.html
@@ -113,41 +113,81 @@
 
     <div class="conteudo2">
         <br>
-        <h1> Espécies </h1>
+        <h1 class="TituloSessao"> Espécies </h1>
         <div class="linhaTitulo"></div>
 
-        <p class="subtituloConteudo2"> Descubra quais são as espécies existentes em Mystic Falls </p>
+        <p class="subtituloSessao"> Descubra quais são as espécies existentes em Mystic Falls </p>
 
         <div class="sessaoEspecies1">
             <div class="especie">
-                <img class="imgElenaVampira" src="imagens-serie/vampEspecie.png">
+                <img class="quadradoEspecie" src="imagens-serie/vampEspecie.png">
                 <p>vampiro</p>
             </div>
             <div class="especie">
-                <img class="imgLobisomem" src="imagens-serie/lobEspecie.png">
+                <img class="quadradoEspecie" src="imagens-serie/lobEspecie.png">
                 <p>lobisomen</p>
             </div>
             <div class="especie">
-                <img class="imgElijahVampiro" src="imagens-serie/elijahEspecie.png">
+                <img class="quadradoEspecie" src="imagens-serie/elijahEspecie.png">
                 <p>vampiro original</p>
             </div>
         </div>
         <br> <br>
         <div class="sessaoEspecies2">
             <div class="especie">
-                <img class="imgKlausHibrido" src="imagens-serie/klausEspecie.png">
+                <img class="quadradoEspecie" src="imagens-serie/klausEspecie.png">
                 <p>híbrido</p>
             </div>
             <div class="especie">
-                <img class="Doppelgangers" src="imagens-serie/doppelSessao.png">
+                <img class="quadradoEspecie" src="imagens-serie/doppelSessao.png">
                 <p>duplicata</p>
             </div>
             <div class="especie">
-                <img class="imgBruxa" src="imagens-serie/bruxaEspecie.png">
+                <img class="quadradoEspecie" src="imagens-serie/bruxaEspecie.png">
                 <p>bruxa</p>
             </div>
         </div>
     </div>
+    </div>
+
+
+    <div class="conteudo3">
+        <br>
+        <h1 class="TituloSessao"> Personagens <h1>
+                <div class="linhaTitulo"></div>
+                <p class="subtituloSessao"> Navegue e descubra um pouco mais sobre os principais personagens da série
+                </p>
+
+                <div class="personagens">
+                    <img class="tamanhoPers" src="imagens-serie/stefan.png">
+                </div>
+
+                <div class="personagens">
+                    <img class="tamanhoPers" src="imagens-serie/elenaPersonagem.png">
+                </div>
+
+                <div class="personagens">
+                    <img class="tamanhoPers" src="imagens-serie/damon.png">
+                </div>
+
+                <div class="personagens">
+                    <img class="tamanhoPers" src="imagens-serie/caroline.png">
+                </div>
+
+                <div class="personagens">
+                    <img class="tamanhoPers" src="imagens-serie/bonnie.png">
+                </div>
+
+                <div class="personagens">
+                    <img class="tamanhoPers" src="imagens-serie/matt.png">
+                </div>
+                <div class="personagens">
+                    <img class="tamanhoPers" src="imagens-serie/tyler.png">
+                </div>
+
+                <div>
+                </div>
+
     </div>
 </body>
 
