alinhei a coluna de personagens, coloquei espaçamento entre elas

--- a/index.html
+++ b/index.html
@@ -157,34 +157,34 @@
                 <div class="linhaTitulo"></div>
                 <p class="subtituloSessao"> Navegue e descubra um pouco mais sobre os principais personagens da série
                 </p>
+                <div class="flexbox">
+                    <div class="personagens">
+                        <img class="tamanhoPers" class="elipse" src="imagens-serie/stefan.png">
+                    </div>
 
-                <div class="personagens">
-                    <img class="tamanhoPers" src="imagens-serie/stefan.png">
-                </div>
+                    <div class="personagens">
+                        <img class="tamanhoPers" src="imagens-serie/elenaPersonagem.png">
+                    </div>
 
-                <div class="personagens">
-                    <img class="tamanhoPers" src="imagens-serie/elenaPersonagem.png">
-                </div>
+                    <div class="personagens">
+                        <img class="tamanhoPers" src="imagens-serie/damon.png">
+                    </div>
 
-                <div class="personagens">
-                    <img class="tamanhoPers" src="imagens-serie/damon.png">
-                </div>
+                    <div class="personagens">
+                        <img class="tamanhoPers" src="imagens-serie/caroline.png">
+                    </div>
 
-                <div class="personagens">
-                    <img class="tamanhoPers" src="imagens-serie/caroline.png">
-                </div>
+                    <div class="personagens">
+                        <img class="tamanhoPers" src="imagens-serie/bonnie.png">
+                    </div>
 
-                <div class="personagens">
-                    <img class="tamanhoPers" src="imagens-serie/bonnie.png">
+                    <div class="personagens">
+                        <img class="tamanhoPers" src="imagens-serie/matt.png">
+                    </div>
+                    <div class="personagens">
+                        <img class="tamanhoPers" src="imagens-serie/tyler.png">
+                    </div>
                 </div>
-
-                <div class="personagens">
-                    <img class="tamanhoPers" src="imagens-serie/matt.png">
-                </div>
-                <div class="personagens">
-                    <img class="tamanhoPers" src="imagens-serie/tyler.png">
-                </div>
-
                 <div>
                 </div>
 
