--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
                 </div>
 
     </div>
+
+    <div class="conteudo4">
+        <h1> Uma Jornada Inesquecível: Tributo à série </h1>
+
+    </div>
+
+    <div class="conteudo5">
+        <h1> Mystic Falls: Lugares Emblemáticos</h1>
+    </div>
 </body>
 
 </html>
