comecei a criar as informações bibliográficas de personagens

--- a/index.html
+++ b/index.html
@@ -238,11 +238,24 @@
                         <img class="imgSessaoPersonagem" src="imagens-serie/damonSalvatore.png">
                         <div>
                             <p class="TituloSessaoPersEsq">INFORMAÇÃO BIBLIOGRÁFICA</p>
-                            <div class="linha1">Linha 1</div>
-                            <div class="linha2">Linha 2</div>
-                            <div class="linha3">Linha 3</div>
+                        </div>
 
+                        <div class="coluna">
+                            <div class="linhas">
+                                <div class="esquerda">Nascimento:</div>
+                                <div class="direita">12 de abril de 1990</div>
+                            </div>
+                            <div class="divisor"></div>
 
+                            <div class="linhas"></div>
+                                 <div class="esquerda">Transformado por:</div>
+                                 <div class="direita">Por Katherine Pierce, em 25 de Setembro, 1864.</div>
+                            <div class="divisor"></div> 
+
+                            <div class="linhas"></div>     
+                              <div class="esquerda">Espécie:</div>
+                              <div class="direita">Vampiro Duplicata</div>
+                            <div class="divisor"></div>
                         </div>
                     </div>
 
