--- a/index.html
+++ b/index.html
@@ -242,20 +242,32 @@
 
                         <div class="coluna">
                             <div class="linhas">
-                                <div class="esquerda">Nascimento:</div>
-                                <div class="direita">12 de abril de 1990</div>
+                                <div class="info">
+                                    <div class="esquerda">Nascimento:</div>
+                                    <div class="direita">12 de abril de 1990</div>
+                                </div>
                             </div>
                             <div class="divisor"></div>
 
                             <div class="linhas"></div>
-                                 <div class="esquerda">Transformado por:</div>
-                                 <div class="direita">Por Katherine Pierce, em 25 de Setembro, 1864.</div>
-                            <div class="divisor"></div> 
-
-                            <div class="linhas"></div>     
-                              <div class="esquerda">Espécie:</div>
-                              <div class="direita">Vampiro Duplicata</div>
+                            <div class="info">
+                                <div class="esquerda">Transformado por:</div>
+                                <div class="direita">Por Katherine Pierce, em 25 de Setembro, 1864</div>
+                            </div>
                             <div class="divisor"></div>
+
+                            <div class="linhas"></div>
+                            <div class="info">
+                                <div class="esquerda">Espécie:</div>
+                                <div class="direita">Vampiro</div>
+                            </div>
+                            <div class="divisor"></div>
+                            <div class="linhas"></div>
+                            <div class="info">
+                                <div class="esquerda">Interpretado por:</div>
+                                <div class="direita">Ian Somerhalder</div>
+                            </div>
+                            
                         </div>
                     </div>
 
