comecei a criar o slider

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diários de Mystic Falls</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">    
     <script src="script.js"></script>
-
 
 </head>
 
@@ -284,12 +282,44 @@
 
                 <div class="conteudo5">
                     <h1 class="TituloSessao"> Mystic Falls: Lugares Emblemáticos</h1>
+
+                     <section class="slider">
+                        <div class="slider-content">
+                            <input type="radio" name="btn-radio" id="radio1">
+                            <input type="radio" name="btn-radio" id="radio2">
+                            <input type="radio" name="btn-radio" id="radio3">
+
+                            <div class="slide-box primeiro">
+                                <img src="imagens-serie/cenários/mansaoSalvatore.png">
+                            </div>
+
+                            <div class="slide-box">
+                                <img src="imagens-serie/cenários/librarySalvatore.jpg">
+                            </div>
+
+                            <div class="slide-box">
+                                <img src="imagens-serie/cenários/mysticGrill.jpg">
+                            </div>
+
+                            <div class="nav-auto">
+                                <div class="auto-btn1"></div>
+                                <div class="auto-btn2"></div>
+                                <div class="auto-btn3"></div>
+                            </div>
+
+                            <div class="nav-manual">
+                                <label for="radio1" class="manual-btn"></label>
+                                <label for="radio2" class="manual-btn"></label>
+                                <label for="radio3" class="manual-btn"></label>
+                            </div>
+                        </div>
+                     </section>
                 </div>
 
 
-                <div class="footer">
+                <!-- <div class="footer">
                     <p> Copyright 2023 - Todos os Direitos Reservados </p>
-                </div>
+                </div> -->
 
 
 </body>
