--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 
 <head>
+    <script src="https://kit.fontawesome.com/6dda5f6271.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diários de Mystic Falls</title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="slider.css">
     <script src="script.js"></script>
+
+
 
 </head>
 
@@ -265,7 +269,7 @@
                                 <div class="esquerda">Interpretado por:</div>
                                 <div class="direita">Ian Somerhalder</div>
                             </div>
-                            
+
                         </div>
                     </div>
 
@@ -283,14 +287,18 @@
                 <div class="conteudo5">
                     <h1 class="TituloSessao"> Mystic Falls: Lugares Emblemáticos</h1>
 
-                     <section class="slider">
+                    <br>
+
+                    <section class="slider">
                         <div class="slider-content">
                             <input type="radio" name="btn-radio" id="radio1">
                             <input type="radio" name="btn-radio" id="radio2">
                             <input type="radio" name="btn-radio" id="radio3">
+                            <input type="radio" name="btn-radio" id="radio4">
+                            <input type="radio" name="btn-radio" id="radio5">
 
                             <div class="slide-box primeiro">
-                                <img src="imagens-serie/cenários/mansaoSalvatore.png">
+                                <img src="imagens-serie/cenários/mansaoSalvatore1.png">
                             </div>
 
                             <div class="slide-box">
@@ -301,25 +309,55 @@
                                 <img src="imagens-serie/cenários/mysticGrill.jpg">
                             </div>
 
+                            <div class="slide-box">
+                                <img src="imagens-serie/cenários/salaSalvatore.jpg">
+                            </div>
+
+                            <div class="slide-box">
+                                <img src="imagens-serie/cenários/quartoElena.jpg">
+                            </div>
+
+
                             <div class="nav-auto">
                                 <div class="auto-btn1"></div>
                                 <div class="auto-btn2"></div>
                                 <div class="auto-btn3"></div>
+                                <div class="auto-btn4"></div>
+                                <div class="auto-btn5"></div>
                             </div>
 
                             <div class="nav-manual">
                                 <label for="radio1" class="manual-btn"></label>
                                 <label for="radio2" class="manual-btn"></label>
                                 <label for="radio3" class="manual-btn"></label>
+                                <label for="radio4" class="manual-btn"></label>
+                                <label for="radio5" class="manual-btn"></label>
                             </div>
                         </div>
-                     </section>
+                    </section>
+                </div>
+                <div class="conteudo6">
+                    <h1>Valores</h1>
+                    <br> <br> <br>
+                    <div class="linhaValores">
+                        <p>Registro de Memórias</p>
+                        <p> Autoconhecimento</p>
+                        <p> Expressão pessoal</p>
+                    </div>
                 </div>
 
+                <div class="conteudo7">
+                    <h1 class="TituloSessao"> Sobre mim <h1>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five enturies, but also the leap into electronic typesetting,
+                                remaining essentially unchanged .Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since  the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                            </p>
+                </div>
 
-                <!-- <div class="footer">
+                <div class="footer">
                     <p> Copyright 2023 - Todos os Direitos Reservados </p>
-                </div> -->
+                </div>
 
 
 </body>
