arrumei a onda entre a sessao 0 e 1, coloquei escrita em cima da onda

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 promover a clareza mental e aumentar o <br> autoconhecimento.
             </p>
         </div>
-
-
     </div>
 
     <div class="ondaPagina">
-        <img class="ondaMarrom" src="icones/MARROM.png">
+        <img src="imagens-serie/MARROM.png">
+        <p> Se você tem ideias, pensamentos <br> e histórias para compartilhar, <br> inscreva-se e crie um espaço
+            pessoal <br> para suas palavras. <br> Sua criatividade é bem-vinda!</p>
     </div>
 
     <div class="conteudo1">
@@ -347,12 +347,40 @@
                 </div>
 
                 <div class="conteudo7">
-                    <h1 class="TituloSessao"> Sobre mim <h1>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                                printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five enturies, but also the leap into electronic typesetting,
-                                remaining essentially unchanged .Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since  the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            </p>
+                    <h1 class="TituloSessao">Sobre mim <h1>
+
+                            <div class="flexbox2">
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                    unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book. It has
+                                    survived not only five enturies, but also the leap into electronic typesetting,
+                                    remaining essentially unchanged .Lorem Ipsum is simply dummy text of the printing
+                                    and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                                    ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                                    to make a type specimen book. It has survived not only five centuries, but also the
+                                    leap into electronic typesetting, remaining essentially unchanged.<br><br>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                    unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book. It has
+                                    survived not only five enturies, but also the leap into electronic typesetting,
+                                    remaining essentially unchanged .Lorem Ipsum is simply dummy text of the printing
+                                    and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                                    ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                                    to make a type specimen book. It has survived not only five centuries, but also the
+                                    leap into electronic typesetting, remaining essentially unchanged.
+
+
+                                </p>
+
+
+                                <div class="minhaFoto">
+                                    <img class="fotoSobreMim" src="imagens-serie/Amanda.png">
+                                </div>
+
+                            </div>
                 </div>
 
                 <div class="footer">
