tela de login finalizada

--- a/Login/login.html
+++ b/Login/login.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <p>HOME</p>
+    </div>
     <div class="flexbox">
         <h1>Bem-vindo à Diários de Mystic Falls</h1>
         <h2>Faça login para acessar sua conta</h2>
         <h3>Nome de Usuário</h3>
-        <input type="text" id="username" class="camposDeEntrada" placeholder="Escreva seu nome de usuário">
+        <input type="text" id="username" class="camposDeEntrada">
         <h3>Senha</h3>
-        <input type="password" id="password" class="camposDeEntrada" placeholder="Digite sua senha">
+        <input type="password" id="password" class="camposDeEntrada">
 
         <h4><a href="#">Esqueceu sua senha?</a></h4>
 
