--- a/Cadastro/cadastro.html
+++ b/Cadastro/cadastro.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Diários de Mystic Falls </title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
     <div id="BoxCadastro">
         <h1>Cadastre-se</h1>
         <h2>Informe seus dados e crie uma senha</h2>
-        <input type="text" class="campoDeDados" placeholder="Nome da Empresa" />
-        <input type="text" class="campoDeDados" placeholder="Responsável" />
-        <input type="text" class="campoDeDados" placeholder="Telefone Responsável" />
-        <input type="text" class="campoDeDados" placeholder="CNPJ" />
+        <input type="text" class="campoDeDados" placeholder="Nome Completo" />
         <input type="text" class="campoDeDados" placeholder="E-mail" />
+        <input type="text" class="campoDeDados" placeholder="Telefone Responsável" />
         <input type="text" class="campoDeDados" placeholder="Criar senha" />
         <input type="text" class="campoDeDados" placeholder="Confirmar senha" />
         <button onclick="cadastrar()" id="botaoCadastrar">Cadastrar</button>
