estilizei a pagina de cadastro

--- a/Cadastro/cadastro.html
+++ b/Cadastro/cadastro.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Diários de Mystic Falls </title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="BoxCadastro">
-        <h1>Cadastre-se</h1>
-        <h2>Informe seus dados e crie uma senha</h2>
-        <input type="text" class="campoDeDados" placeholder="Nome Completo" />
-        <input type="text" class="campoDeDados" placeholder="E-mail" />
-        <input type="text" class="campoDeDados" placeholder="Criar senha" />
-        <input type="text" class="campoDeDados" placeholder="Confirmar senha" />
-        <button onclick="cadastrar()" id="botaoCadastrar">Cadastrar</button>
+        <div class="flexbox">
+            <h1>Cadastre-se</h1>
+            <h2>Informe seus dados e crie uma senha</h2>
+            <input type="text" class="campoDeDados" placeholder="Nome Completo" />
+            <input type="text" class="campoDeDados" placeholder="E-mail" />
+            <input type="text" class="campoDeDados" placeholder="Criar senha" />
+            <input type="text" class="campoDeDados" placeholder="Confirmar senha" />
+            <button onclick="cadastrar()" id="botaoCadastrar">Cadastrar</button>
+        </div>
     </div>
 </body>
 
