--- a/Cadastro/cadastro.html
+++ b/Cadastro/cadastro.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <p>LOGIN</p>
+        <p>HOME</p>
+    </div>
     <div id="BoxCadastro">
         <div class="flexbox">
             <h1>Cadastre-se</h1>
