--- a/Login/login.html
+++ b/Login/login.html
@@ -22,7 +22,7 @@
 
         <h4><a href="#">Esqueceu sua senha?</a></h4>
 
-        <button onclick="logar()" id="botao_logar">Login</button>
+        <button onclick="logar()" id="botaoLogar">Login</button>
 
         <h5>Não tem uma conta? <a href="" id="ancoraCadastro">Crie agora!</a></h4>
     </div>
