primeiras estilizações e ajustes da pagina de especies

--- a/pagina1/especieVampiro.html
+++ b/pagina1/especieVampiro.html
@@ -35,17 +35,19 @@
 
     <div class="unicaSessao">
         <h1> Vampiro </h1>
-        <p>Informações da Espécie</p>
+        <h3>Informações da Espécie</h3>
 
         <div class="primeiraCaixa">
+            <img class="fotoEspecie" src="stefanVampiropag1.png">
             <div class="caixaCitacao">
                 <p> Eu tenho que admitir ... no início, me sentir estranha, o gosto metálico. Mas então, foi como a
                     eletricidade percorrendo meu corpo - um milhão de estrelas explodindo em minha mente de uma só vez.
                     É como nada que já senti antes. Foi fantástico. E tudo o que posso pensar agora é ... Eu quero fazer
                     novamente. </p>
+                <p class="citacaoAutor"> <b> - Camille sobre se tornar uma Vampira </b></p>
             </div>
 
-            <p>Vampiros são cadáveres humanos magicamente reanimados que são habitados pelos espíritos da pessoa
+            <p class="descricaoEspecie">Vampiros são cadáveres humanos magicamente reanimados que são habitados pelos espíritos da pessoa
                 falecida e
                 que se parecem muito com o ser vivo que eram antes da sua transformação. Os vampiros se alimentam e
                 sobrevivem do sangue dos vivos, tipicamente sobre o dos humanos, e também podem transformar outros seres
@@ -56,18 +58,20 @@
         </div>
 
         <div class="segundaCaixa">
+
             <h1>Verbena</h1>
-            <p> Verbena é uma erva potente e a fraqueza mais conhecida de um vampiro. Qualquer contato físico com
+            <img class="fotoVerbena" src="verbena.png">
+            <!-- <p> Verbena é uma erva potente e a fraqueza mais conhecida de um vampiro. Qualquer contato físico com
                 Verbena
                 queima os vampiros, tornando-os fracos e febris. Isso afeta também os híbridos de vampiro. Se os humanos
                 ingerem ou mantêm Verbena consigo, ficam protegidos contra o controle mental vampírico e mantêm seu
-                livre
-                arbítrio.</p>
+                livre arbítrio.</p> -->
         </div>
 
         <div class="terceiraCaixa">
             <h1>ANÉIS DA LUZ DO DIA</h1>
-            <p>São joias encantadas por bruxas, geralmente contendo uma pedra preciosa de lápis-lazúli. Eles desempenham
+            <img class="fotoAnel" src="anelLuz.png">
+            <!-- <p>São joias encantadas por bruxas, geralmente contendo uma pedra preciosa de lápis-lazúli. Eles desempenham
                 um
                 papel fundamental na proteção dos vampiros contra a luz solar, permitindo-lhes a liberdade de se mover
                 durante o dia. Paralelamente, os lobisomens possuem os Amuletos do Luar como seus equivalentes, que
@@ -77,7 +81,7 @@
                 costumam usar acessórios com lápis-lazúli, como pulseiras, colares ou anéis, enquanto os vampiros
                 masculinos
                 geralmente optam apenas por anéis.
-            </p>
+            </p> -->
         </div>
 
         <div class="quartaCaixa">
